noinst_HEADERS += \
	%reldir%/luastate.h

nngn_SOURCES += \
	%reldir%/lua_luastate.cpp \
	%reldir%/luastate.cpp \
	%reldir%/main.cpp

EXTRA_DIST += \
	%reldir%/lua

include %reldir%/graphics/Makefile.am
include %reldir%/os/Makefile.am
include %reldir%/timing/Makefile.am
include %reldir%/utils/Makefile.am
