EXTRA_DIST += \
	%reldir%

noinst_HEADERS += \
	%reldir%/function.h \
	%reldir%/lua.h \
	%reldir%/state.h \
	%reldir%/table.h \
	%reldir%/traceback.h \
	%reldir%/utils.h \
	%reldir%/types.h \
	%reldir%/value.h

nngn_SOURCES += \
	%reldir%/function.cpp \
	%reldir%/state.cpp \
	%reldir%/table.cpp \
	%reldir%/traceback.cpp \
	%reldir%/types.cpp \
	%reldir%/utils.cpp \
	%reldir%/value.cpp
