LUA_FILES += \
	%reldir%/all.lua \
	%reldir%/configure.lua \
	%reldir%/debug.lua \
	%reldir%/init.lua \
	%reldir%/inspect.lua \
	%reldir%/lib/all.lua \
	%reldir%/lib/configure.lua \
	%reldir%/lib/debug.lua \
	%reldir%/lib/graphics.lua \
	%reldir%/lib/inspect.lua \
	%reldir%/lib/math.lua \
	%reldir%/lib/plot.lua \
	%reldir%/lib/profile.lua \
	%reldir%/lib/serial.lua \
	%reldir%/lib/timeline.lua \
	%reldir%/lib/tools.lua \
	%reldir%/lib/utils.lua \
	%reldir%/path.lua \
	%reldir%/plot.lua \
	%reldir%/profile.lua \
	%reldir%/strict.lua \
	%reldir%/timeline.lua

noinst_HEADERS += \
	%reldir%/alloc.h \
	%reldir%/function.h \
	%reldir%/get.h \
	%reldir%/iter.h \
	%reldir%/lua.h \
	%reldir%/push.h \
	%reldir%/register.h \
	%reldir%/state.h \
	%reldir%/table.h \
	%reldir%/traceback.h \
	%reldir%/user.h \
	%reldir%/utils.h \
	%reldir%/value.h

nngn_SOURCES += \
	%reldir%/alloc.cpp \
	%reldir%/function.cpp \
	%reldir%/get.cpp \
	%reldir%/iter.cpp \
	%reldir%/lua.cpp \
	%reldir%/lua_state.cpp \
	%reldir%/push.cpp \
	%reldir%/register.cpp \
	%reldir%/state.cpp \
	%reldir%/table.cpp \
	%reldir%/traceback.cpp \
	%reldir%/user.cpp \
	%reldir%/utils.cpp \
	%reldir%/value.cpp
