noinst_HEADERS += \
	%reldir%/hash.h \
	%reldir%/lua_vector.h \
	%reldir%/mat.h \
	%reldir%/mat3.h \
	%reldir%/mat4.h \
	%reldir%/math.h \
	%reldir%/vec2.h \
	%reldir%/vec3.h \
	%reldir%/vec4.h \
	%reldir%/vec.h
nngn_SOURCES += \
	%reldir%/lua_math.cpp \
	%reldir%/lua_vector.cpp \
	%reldir%/mat.cpp \
	%reldir%/mat3.cpp \
	%reldir%/mat4.cpp \
	%reldir%/math.cpp
