noinst_HEADERS += \
	%reldir%/animation.h \
	%reldir%/gen.h \
	%reldir%/grid.h \
	%reldir%/light.h \
	%reldir%/render.h \
	%reldir%/renderers.h \
	%reldir%/sun.h
nngn_SOURCES += \
	%reldir%/animation.cpp \
	%reldir%/gen.cpp \
	%reldir%/grid.cpp \
	%reldir%/light.cpp \
	%reldir%/lua_animation.cpp \
	%reldir%/lua_grid.cpp \
	%reldir%/lua_light.cpp \
	%reldir%/lua_render.cpp \
	%reldir%/lua_sun.cpp \
	%reldir%/render.cpp \
	%reldir%/renderers.cpp \
	%reldir%/sun.cpp
