noinst_HEADERS += \
	%reldir%/adhoc.h \
	%reldir%/fps.h \
	%reldir%/profile.h \
	%reldir%/schedule.h \
	%reldir%/stats.h \
	%reldir%/timing.h
nngn_SOURCES += \
	%reldir%/adhoc.cpp \
	%reldir%/fps.cpp \
	%reldir%/lua_fps.cpp \
	%reldir%/lua_profile.cpp \
	%reldir%/lua_schedule.cpp \
	%reldir%/lua_stats.cpp \
	%reldir%/lua_timing.cpp \
	%reldir%/profile.cpp \
	%reldir%/schedule.cpp \
	%reldir%/stats.cpp \
	%reldir%/timing.cpp
