noinst_HEADERS += \
	%reldir%/concepts.h \
	%reldir%/concepts/fundamental.h \
	%reldir%/def.h \
	%reldir%/delegate.h \
	%reldir%/fixed_string.h \
	%reldir%/flags.h \
	%reldir%/fn.h \
	%reldir%/literals.h \
	%reldir%/log.h \
	%reldir%/pointer_flag.h \
	%reldir%/pp.h \
	%reldir%/ranges.h \
	%reldir%/regexp.h \
	%reldir%/scoped.h \
	%reldir%/tuple.h \
	%reldir%/utils.h
nngn_SOURCES += \
	%reldir%/concepts.cpp \
	%reldir%/concepts/fundamental.cpp \
	%reldir%/fixed_string.cpp \
	%reldir%/flags.cpp \
	%reldir%/fn.cpp \
	%reldir%/literals.cpp \
	%reldir%/log.cpp \
	%reldir%/pp.cpp \
	%reldir%/ranges.cpp \
	%reldir%/regexp.cpp \
	%reldir%/tuple.cpp \
	%reldir%/utils.cpp

include %reldir%/alloc/Makefile.am
