noinst_HEADERS += \
	%reldir%/concepts.h \
	%reldir%/def.h \
	%reldir%/delegate.h \
	%reldir%/flag_array.h \
	%reldir%/flags.h \
	%reldir%/literals.h \
	%reldir%/log.h \
	%reldir%/macros.h \
	%reldir%/pointer_flag.h \
	%reldir%/scoped.h \
	%reldir%/static_vector.h \
	%reldir%/utils.h \
	%reldir%/vector.h
nngn_SOURCES += \
	%reldir%/flag_array.cpp \
	%reldir%/flags.cpp \
	%reldir%/log.cpp \
	%reldir%/utils.cpp
